fixed dark mode for cookie pop up

--- a/index.css
+++ b/index.css
@@ -184,6 +184,13 @@ button.dark-button {
   background-color: #1b1b1b;
 }
 
+.dark-mode div.wrapper {
+  background-color: #333;
+}
+
+.dark-mode .data p {
+  color: white;
+}
 .dark-mode nav {
   background-color: #373434;
 }
